// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDevToolsTab can add a tab 1`] = `
{
  "devTools": [
    {
      "views": [
        {
          "id": "codesandbox.browser",
        },
        {
          "id": "codesandbox.tests",
        },
        {
          "id": "codesandbox.browser",
        },
      ],
    },
  ],
  "position": {
    "devToolIndex": 0,
    "tabPosition": 2,
  },
}
`;

exports[`addDevToolsTab can add a tab on specific position 1`] = `
{
  "devTools": [
    {
      "views": [
        {
          "id": "codesandbox.tests",
        },
        {
          "id": "codesandbox.browser",
        },
        {
          "id": "codesandbox.tests",
        },
      ],
    },
  ],
  "position": {
    "devToolIndex": 0,
    "tabPosition": 0,
  },
}
`;

exports[`moveDevToolsTab can move a tab from one devtools to the other 1`] = `
[
  {
    "views": [
      {
        "id": "codesandbox.tests",
      },
    ],
  },
  {
    "views": [
      {
        "id": "codesandbox.console",
      },
      {
        "id": "codesandbox.browser",
      },
      {
        "id": "codesandbox.problems",
      },
    ],
  },
]
`;

exports[`moveDevToolsTab can move a tab from one devtools to the other and move it back 1`] = `
[
  {
    "views": [
      {
        "id": "codesandbox.browser",
      },
      {
        "id": "codesandbox.tests",
      },
    ],
  },
  {
    "views": [
      {
        "id": "codesandbox.console",
      },
      {
        "id": "codesandbox.problems",
      },
    ],
  },
]
`;

exports[`moveDevToolsTab can move a tab in same devtools 1`] = `
[
  {
    "views": [
      {
        "id": "codesandbox.tests",
      },
      {
        "id": "codesandbox.browser",
      },
    ],
  },
  {
    "views": [
      {
        "id": "codesandbox.console",
      },
      {
        "id": "codesandbox.problems",
      },
    ],
  },
]
`;

exports[`moveDevToolsTab can move a tab in same devtools and move the tab back 1`] = `
[
  {
    "views": [
      {
        "id": "codesandbox.browser",
      },
      {
        "id": "codesandbox.tests",
      },
    ],
  },
  {
    "views": [
      {
        "id": "codesandbox.console",
      },
      {
        "id": "codesandbox.problems",
      },
    ],
  },
]
`;

exports[`moveDevToolsTab can move the tab to the same position 1`] = `
[
  {
    "views": [
      {
        "id": "codesandbox.browser",
      },
      {
        "id": "codesandbox.tests",
      },
    ],
  },
  {
    "views": [
      {
        "id": "codesandbox.console",
      },
      {
        "id": "codesandbox.problems",
      },
    ],
  },
]
`;
